Simplification algos now have cli command they can be run through